--- a/pipelines/docker-bake/Dockerfile
+++ b/pipelines/docker-bake/Dockerfile
@@ -3,7 +3,7 @@ FROM docker:24.0.0-dind
 RUN apk add --no-cache bash curl git
 
 RUN mkdir -p /app
-COPY build.sh /app/build.sh
+COPY pipelines/docker-bake/build.sh /app/build.sh
 RUN chmod +x /app/build.sh
 
 WORKDIR /app
