see if giving single quotes to container works

--- a/pipelines/docker-bake/Jenkinsfile
+++ b/pipelines/docker-bake/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                             ${params.REPO_URL} \
                             ${params.DOCKER_BAKE_FILE} \
                             ${REGISTRY_USERNAME} \
-                            ${REGISTRY_PASSWORD}
+                            '${REGISTRY_PASSWORD}'
                         """
                     }
                 }
