Prune buildx containers once they are done with

--- a/pipelines/docker-bake/Jenkinsfile
+++ b/pipelines/docker-bake/Jenkinsfile
@@ -47,5 +47,9 @@ pipeline {
         failure {
             echo 'Build failed. Check logs for errors.'
         }
+        always {
+            sh 'docker buildx rm || true'
+            sh 'docker system prune -f --volumes'
+        }
     }
 }
