use stash for vm metadata

--- a/pipelines/box-builder/Jenkinsfile
+++ b/pipelines/box-builder/Jenkinsfile
@@ -25,6 +25,7 @@ pipeline {
         PROXMOX_API_CREDS   = credentials('proxmox-api-token')
         PROXMOX_LOW_VMID    = "400"
         PROXMOX_HIGH_VMID   = "600"
+        STASH_NAME          = "vm_metadata_${BUILD_ID}"
     }
     stages {
         stage('Parameter Validation') {
@@ -42,7 +43,7 @@ pipeline {
                 }
             }
         }
-        
+
         stage('Checkout') {
             steps {
                 checkout([$class: 'GitSCM',
@@ -53,7 +54,7 @@ pipeline {
                 ])
             }
         }
-        
+
         stage('Build Box') {
             agent {
                 node {
@@ -91,6 +92,7 @@ pipeline {
                                         --vm_storage    ${params.STORAGE} \
                                         --vm_network    ${params.NETWORK}
                                 """
+                                stash name: "${env.STASH_NAME}", includes: "vm_metadata.json"
                             }
                         }
                     }
@@ -101,6 +103,7 @@ pipeline {
     post {
         success {
             script {
+                unstash "${env.STASH_NAME}"
                 dir('pipelines/box-builder') {
                     archiveArtifacts artifacts: "vm_metadata.json", onlyIfSuccessful: true
                 }
