delete the iso when done

--- a/pipelines/download-iso/Jenkinsfile
+++ b/pipelines/download-iso/Jenkinsfile
@@ -39,6 +39,7 @@ pipeline {
                     agent {
                         dockerfile {
                             filename 'pipelines/download-iso/Dockerfile'
+                            args '-v /tmp:/tmp'
                         }
                     }
                     steps {
