--- a/pipelines/download-iso/Jenkinsfile
+++ b/pipelines/download-iso/Jenkinsfile
@@ -32,31 +32,25 @@ pipeline {
 
         stage('Download and Upload ISO') {
             agent {
-                label 'admin'
+                dockerfile {
+                    filename 'pipelines/download-iso/Dockerfile'
+                    args '-v /tmp:/tmp'
+                    reuseNode true
+                }
             }
-            stages {
-                stage ('Execute within docker'){
-                    agent {
-                        dockerfile {
-                            filename 'pipelines/download-iso/Dockerfile'
-                            args '-v /tmp:/tmp'
-                        }
-                    }
-                    steps {
-                        script {
-                            dir('pipelines/download-iso') {
-                                def token_name = PROXMOX_API_CREDS.split(':')[0]
-                                def token_secret = PROXMOX_API_CREDS.split(':')[1]
-                                sh """
-                                    python download.py \
-                                        --proxmox_ip    ${params.PROXMOX_IP} \
-                                        --proxmox_node  ${params.PROXMOX_NODE} \
-                                        --iso_url       ${params.ISO_URL} \
-                                        --token_name    ${token_name} \
-                                        --token_secret  ${token_secret}
-                                """
-                            }
-                        }
+            steps {
+                script {
+                    dir('pipelines/download-iso') {
+                        def token_name = PROXMOX_API_CREDS.split(':')[0]
+                        def token_secret = PROXMOX_API_CREDS.split(':')[1]
+                        sh """
+                            python download.py \
+                                --proxmox_ip    ${params.PROXMOX_IP} \
+                                --proxmox_node  ${params.PROXMOX_NODE} \
+                                --iso_url       ${params.ISO_URL} \
+                                --token_name    ${token_name} \
+                                --token_secret  ${token_secret}
+                        """
                     }
                 }
             }
