Ensure docker is installed on agents

--- a/pipelines/jenkins-agent-builder/agent-configs/Dockerfile
+++ b/pipelines/jenkins-agent-builder/agent-configs/Dockerfile
@@ -9,6 +9,10 @@ ENV JENKINS_AGENT_NAME=${JENKINS_AGENT_NAME}
 ENV JENKINS_SECRET=${JENKINS_SECRET}
 ENV JENKINS_AGENT_WORKDIR=/home/jenkins/agent
 
+USER root
+RUN apt update && curl -fsSL https://get.docker.com | sh
+RUN usermod -aG docker jenkins
+USER jenkins
 
 ENTRYPOINT ["/usr/local/bin/jenkins-agent"]
 
